<resources>
    <string name="app_name">CazarPatos</string>
    <string name="textEmail">Escribe tu Email</string>
    <string name="textClave">Escribe tu Clave</string>
    <string name="textRecordar">Recordarme</string>
    <string name="textIniciar">Iniciar juego</string>
    <string name="textNuevoUsuario">Nuevo Usuario</string>
    <string name="action_settings1">Nuevo Juego</string>
    <string name="action_settings2">Jugar Online</string>
    <string name="action_settings3">Hall de fama</string>
</resources>