<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_game"
    android:padding="16dp"
    tools:context=".LoginActivity">
    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/title" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:fontFamily="@font/press_start_2p"
        android:hint="@string/textEmail"
        android:inputType="textPersonName"
        android:textColor="@android:color/white"
        android:textColorLink="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/imageViewLogo"
        app:layout_constraintStart_toStartOf="@+id/imageViewLogo"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogo" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:fontFamily="@font/press_start_2p"
        android:hint="@string/textClave"
        android:inputType="numberPassword"
        android:textColor="@android:color/white"
        android:textColorLink="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextEmail"
        app:layout_constraintStart_toStartOf="@+id/editTextEmail"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <CheckBox
        android:id="@+id/checkBoxRecordarme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/pixel"
        android:text="@string/textRecordar"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/pixel"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/textIniciar"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/checkBoxRecordarme"
        app:layout_constraintStart_toStartOf="@+id/checkBoxRecordarme"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxRecordarme" />

    <Button
        android:id="@+id/buttonNewUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/pixel"
        android:backgroundTint="@color/colorPrimaryLight"
        android:text="@string/textNuevoUsuario"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/buttonLogin"
        app:layout_constraintStart_toStartOf="@+id/buttonLogin"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

    <ImageButton
        android:id="@+id/imageButtomGoogle"
        android:layout_width="77dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/google3"
        android:background="#62ACFD"
        app:layout_constraintEnd_toEndOf="@+id/buttonNewUser"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="@+id/buttonNewUser"
        app:layout_constraintTop_toBottomOf="@+id/buttonNewUser" />

</androidx.constraintlayout.widget.ConstraintLayout>